feat: add slot to go up in dir

--- a/Main Window/mainwindow.ui
+++ b/Main Window/mainwindow.ui
@@ -14,13 +14,26 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <widget class="QPushButton" name="back_button">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>10</y>
+      <width>83</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>&lt;- Назад</string>
+    </property>
+   </widget>
    <widget class="QSplitter" name="splitter">
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>10</y>
+      <y>50</y>
       <width>741</width>
-      <height>531</height>
+      <height>491</height>
      </rect>
     </property>
     <property name="orientation">
