--- a/Main Window/mainwindow.ui
+++ b/Main Window/mainwindow.ui
@@ -14,33 +14,62 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="back_button">
-    <property name="geometry">
-     <rect>
-      <x>410</x>
-      <y>10</y>
-      <width>83</width>
-      <height>29</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>&lt;- Назад</string>
-    </property>
-   </widget>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
    <widget class="QSplitter" name="splitter">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>50</y>
-      <width>741</width>
-      <height>491</height>
+      <x>10</x>
+      <y>20</y>
+      <width>781</width>
+      <height>521</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
-    <widget class="QTreeView" name="treeView"/>
-    <widget class="QListView" name="listView"/>
+    <widget class="QWidget" name="verticalLayoutWidget">
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Информация</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QTableView" name="tableView"/>
+      </item>
+     </layout>
+    </widget>
+    <widget class="QWidget" name="gridLayoutWidget">
+     <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,0,0">
+      <item row="0" column="0">
+       <widget class="QPushButton" name="back_button">
+        <property name="text">
+         <string>&lt;- Назад</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QPushButton" name="main_info_button">
+        <property name="text">
+         <string>Показать инфо</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0" colspan="3">
+       <widget class="QListView" name="listView"/>
+      </item>
+     </layout>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -52,8 +81,52 @@
      <height>25</height>
     </rect>
    </property>
+   <widget class="QMenu" name="instruments">
+    <property name="title">
+     <string>Инструменты</string>
+    </property>
+    <addaction name="action_2"/>
+    <addaction name="action_3"/>
+    <addaction name="action_4"/>
+   </widget>
+   <widget class="QMenu" name="about">
+    <property name="title">
+     <string>Справка</string>
+    </property>
+    <addaction name="separator"/>
+    <addaction name="action_6"/>
+    <addaction name="separator"/>
+    <addaction name="action_8"/>
+   </widget>
+   <addaction name="instruments"/>
+   <addaction name="about"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="action_2">
+   <property name="text">
+    <string>Загрузить снапшот директории</string>
+   </property>
+  </action>
+  <action name="action_3">
+   <property name="text">
+    <string>Сохранить снапшот директории</string>
+   </property>
+  </action>
+  <action name="action_4">
+   <property name="text">
+    <string>Посчитать контрольную сумму</string>
+   </property>
+  </action>
+  <action name="action_6">
+   <property name="text">
+    <string>Возможности</string>
+   </property>
+  </action>
+  <action name="action_8">
+   <property name="text">
+    <string>О программе...</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
