--- a/Main Window/mainwindow.ui
+++ b/Main Window/mainwindow.ui
@@ -29,7 +29,7 @@
       <widget class="QWidget" name="verticalLayoutWidget">
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
-         <widget class="QLabel" name="label">
+         <widget class="QLabel" name="info_label">
           <property name="text">
            <string>Информация</string>
           </property>
@@ -61,6 +61,13 @@
         </item>
         <item row="1" column="0" colspan="3">
          <widget class="QListView" name="listView"/>
+        </item>
+        <item row="0" column="2">
+         <widget class="QCheckBox" name="dir_size_box">
+          <property name="text">
+           <string>Размер директорий</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
