--- a/Main Window/mainwindow.ui
+++ b/Main Window/mainwindow.ui
@@ -46,7 +46,11 @@
       <widget class="QWidget" name="gridLayoutWidget">
        <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,0,0,0">
         <item row="3" column="0" colspan="4">
-         <widget class="QListView" name="listView"/>
+         <widget class="QListView" name="listView">
+          <property name="selectionMode">
+           <enum>QAbstractItemView::ExtendedSelection</enum>
+          </property>
+         </widget>
         </item>
         <item row="0" column="3">
          <widget class="QComboBox" name="storages_box">
@@ -119,7 +123,7 @@
     </property>
     <addaction name="action_2"/>
     <addaction name="action_3"/>
-    <addaction name="action_4"/>
+    <addaction name="calc_file_hash_sum"/>
    </widget>
    <widget class="QMenu" name="about">
     <property name="title">
@@ -128,7 +132,7 @@
     <addaction name="separator"/>
     <addaction name="action_6"/>
     <addaction name="separator"/>
-    <addaction name="action_8"/>
+    <addaction name="info_message"/>
    </widget>
    <addaction name="instruments"/>
    <addaction name="about"/>
@@ -144,9 +148,12 @@
     <string>Сохранить снапшот директории</string>
    </property>
   </action>
-  <action name="action_4">
+  <action name="calc_file_hash_sum">
    <property name="text">
     <string>Посчитать контрольную сумму</string>
+   </property>
+   <property name="toolTip">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Выделите курсором файлы и папки, для которых необходимо посчитать контрольные суммы&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </action>
   <action name="action_6">
@@ -154,7 +161,7 @@
     <string>Возможности</string>
    </property>
   </action>
-  <action name="action_8">
+  <action name="info_message">
    <property name="text">
     <string>О программе...</string>
    </property>
