--- a/Compare Window/CompareWindow.ui
+++ b/Compare Window/CompareWindow.ui
@@ -13,46 +13,47 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QWidget" name="horizontalLayoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>-1</x>
-     <y>-1</y>
-     <width>1101</width>
-     <height>541</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
-    <item>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <widget class="QComboBox" name="left_snaphots_box">
-        <property name="placeholderText">
-         <string>Выберите снапшот</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QTableView" name="left_table_view"/>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
-      <item>
-       <widget class="QComboBox" name="right_snapshots_box">
-        <property name="placeholderText">
-         <string>Выберите снапшот</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QTableView" name="right_table_view"/>
-      </item>
-     </layout>
-    </item>
-   </layout>
-  </widget>
+  <layout class="QVBoxLayout" name="verticalLayout_3">
+   <item>
+    <widget class="QComboBox" name="dir_box">
+     <property name="placeholderText">
+      <string>Выберите директорию</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QComboBox" name="left_snaphots_box">
+         <property name="placeholderText">
+          <string>Выберите снапшот</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTableView" name="left_table_view"/>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QComboBox" name="right_snapshots_box">
+         <property name="placeholderText">
+          <string>Выберите снапшот</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTableView" name="right_table_view"/>
+       </item>
+      </layout>
+     </item>
+    </layout>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections/>
