--- a/Main Window/mainwindow.ui
+++ b/Main Window/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>877</width>
+    <width>892</width>
     <height>508</height>
    </rect>
   </property>
@@ -45,10 +45,27 @@
       </widget>
       <widget class="QWidget" name="gridLayoutWidget">
        <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,0,0,0">
-        <item row="3" column="0" colspan="4">
-         <widget class="QListView" name="listView">
-          <property name="selectionMode">
-           <enum>QAbstractItemView::SelectionMode::ExtendedSelection</enum>
+        <item row="0" column="2">
+         <widget class="QCheckBox" name="dir_size_box">
+          <property name="text">
+           <string>Размер директорий</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QPushButton" name="main_info_button">
+          <property name="text">
+           <string>Показать инфо</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0" colspan="4">
+         <widget class="QLineEdit" name="path_line">
+          <property name="dragEnabled">
+           <bool>true</bool>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
@@ -71,13 +88,6 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="1">
-         <widget class="QPushButton" name="main_info_button">
-          <property name="text">
-           <string>Показать инфо</string>
-          </property>
-         </widget>
-        </item>
         <item row="0" column="0">
          <widget class="QPushButton" name="back_button">
           <property name="text">
@@ -85,22 +95,15 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="2">
-         <widget class="QCheckBox" name="dir_size_box">
-          <property name="text">
-           <string>Размер директорий</string>
+        <item row="3" column="0" colspan="4">
+         <widget class="QListView" name="listView">
+          <property name="selectionMode">
+           <enum>QAbstractItemView::SelectionMode::ExtendedSelection</enum>
           </property>
          </widget>
         </item>
-        <item row="1" column="0" colspan="4">
-         <widget class="QLineEdit" name="path_line">
-          <property name="dragEnabled">
-           <bool>true</bool>
-          </property>
-          <property name="readOnly">
-           <bool>true</bool>
-          </property>
-         </widget>
+        <item row="4" column="0" colspan="4">
+         <widget class="QTextBrowser" name="realTimeLog"/>
         </item>
        </layout>
       </widget>
@@ -113,7 +116,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>877</width>
+     <width>892</width>
      <height>25</height>
     </rect>
    </property>
