--- a/Main Window/mainwindow.ui
+++ b/Main Window/mainwindow.ui
@@ -135,6 +135,7 @@
     <addaction name="action_load_snap"/>
     <addaction name="actionSaveSnap"/>
     <addaction name="menu"/>
+    <addaction name="drop_db_action"/>
    </widget>
    <widget class="QMenu" name="about">
     <property name="title">
@@ -193,6 +194,11 @@
   <action name="show_log_2">
    <property name="text">
     <string>Показать логи</string>
+   </property>
+  </action>
+  <action name="drop_db_action">
+   <property name="text">
+    <string>Очистить базу данных снапшотов</string>
    </property>
   </action>
  </widget>
